istio/istio-astronomy-shop.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: astronomy-shop-gateway
  namespace: astronomy-shop
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "astronomyshop.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: astronomy-shop-httproute
  namespace: astronomy-shop
spec:
  hosts:
    - "astronomyshop.IP_TO_REPLACE.nip.io"
  gateways:
    - astronomy-shop-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 8080
            host: astronomy-shop-frontend
